--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a{
   color: #fff;
 }
 body{
-	background: url('img/alhambra.jpg') center center;
+	background: url('img/alhambra1.jpg') center center;
 	background-size: cover;
 }
 
