--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 	position:absolute;
 	width:90%;
 	max-width: 600px;
-	color: #fff;
+	color: #3633ff;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
